--- a/biblio.bib
+++ b/biblio.bib
@@ -26,8 +26,8 @@
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.111802}
 }
 
-@ARTICLE{SNO,
-author = {Yao, W.-M. and al.,
+@article{SNO,
+author = {Yao, W.-M. and al.},
 title = "{Review of Particle Physics}",
 journal = "{Journal of Physics G}",
 year = 2006,
@@ -278,25 +278,6 @@ number = "3",
   url = {http://link.aps.org/doi/10.1103/PhysRevC.68.035501}
 }
 
-@article{Aurora,
-      author         = "Danevich, F. A. and others",
-      title          = "{Search for double beta decay of $^{116}$Cd with enriched
-                        $^{116}$CdWO$_4$ crystal scintillators (Aurora
-                        experiment)}",
-      booktitle      = "{Proceedings, 14th International Conference on Topics in
-                        Astroparticle and Underground Physics (TAUP 2015): Torino,
-                        Italy, September 7-11, 2015}",
-      journal        = "J. Phys. Conf. Ser.",
-      volume         = "718",
-      year           = "2016",
-      number         = "6",
-      pages          = "062009",
-      doi            = "10.1088/1742-6596/718/6/062009",
-      eprint         = "1601.05578",
-      archivePrefix  = "arXiv",
-      primaryClass   = "nucl-ex",
-      SLACcitation   = "%%CITATION = ARXIV:1601.05578;%%"
-}
 
 
 @article{NEMO-3-detector,
@@ -888,8 +869,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{HeidelbergMoscow3,
       author         = "Aalseth, C. E. and others",
-      title          = "{Comment on `Evidence for neutrinoless double beta
-                        decay'}",
+      title          = "Comment on Evidence for neutrinoless double beta decay",
       journal        = "Mod. Phys. Lett.",
       volume         = "A17",
       year           = "2002",
@@ -903,8 +883,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 
 @article{IGEX,
-	risfield_0_da = {2000//},
-	author = Aalseth C. E. and others",
+	author = "Aalseth C. E. and others",
 	doi = {http://dx.doi.org/10.1134/1.855774 10.1134/1.855774},
 	issn = {1562-692X},
 	journal = {Physics of Atomic Nuclei},
@@ -940,7 +919,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 	journal = {The European Physical Journal C},
 	number = {9},
 	pages = {416},
-	title = {{Results on $\beta\beta$  decay with emission of two neutrinos or Majorons in $$^{76}$$ 76 Ge from GERDA Phase I}},
+	title = {{Results on $\beta\beta$  decay with emission of two neutrinos or Majorons in $^{76}$ 76 Ge from GERDA PhaseI}},
 	volume = {75},
 	year = {2015}
 }
@@ -985,13 +964,13 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 @article{MAJORANAandGERDA,
 	risfield_0_da = {2012/08/01},
 	risfield_1_t2 = {Neutrino 2010},
-	author = {{Barnab\'{e} Heider Marik}},
+	author = {Barnab\'{e} Heider Marik},
 	doi = {http://dx.doi.org/10.1016/j.nuclphysbps.2012.09.023},
 	issn = {0920-5632},
 	journal = {Nuclear Physics B - Proceedings Supplements},
 	keywords = {Semiconductor detector; Neutrinoless double beta decay; Radiation detector; CZT detector; Ge detector},
 	pages = {141--145},
-	title = {{Semiconductor-based experiments for neutrinoless double beta decay search}},
+	title = {Semiconductor-based experiments for neutrinoless double beta decay search},
 	url = {http://www.sciencedirect.com/science/article/pii/S092056321200240X},
 	volume = {229},
 	year = {2012}
@@ -1015,7 +994,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{ELEGANTVI,
   title = {Neutrino-less double-$\ensuremath{\beta}$ decay of $^{48}\mathrm{Ca}$ studied by ${\mathrm{CaF}}_{2}$(Eu) scintillators},
-  author = Umehara, S. and others,
+  author = {Umehara, S. and others},
   journal = {Phys. Rev. C},
   volume = {78},
   issue = {5},
@@ -1031,7 +1010,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{CANDLESIII,
   title = {Search for neutrino-less double beta decay with CANDLES},
-  author = A S. Umehara and others,
+  author = {A S. Umehara and others},
   journal = {AIP Conference Proceedings},
   volume = {1441},
   pages = {448-450},
@@ -1676,8 +1655,8 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @online{GEANT4,
   author = {Cern GEANT4},
-  title = {{GEANT 4},
-  url = {http://geant4.cern.ch/},
+  title = {GEANT 4},
+  url = {http://geant4.cern.ch/}
 }
 
 
@@ -1954,7 +1933,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{TauDiscovery,
   title = {Evidence for Anomalous Lepton Production in ${e}^{+}\ensuremath{-}{e}^{\ensuremath{-}}$ Annihilation},
-  author = {Perl, M. L. and Abrams, G. S. and Boyarski, A. M. and Breidenbach, M. and Briggs, D. D. and Bulos, F. and Chinowsky, W. and Dakin, J. T. and Feldman, G. J. and Friedberg, C. E. and Fryberger, D. and Goldhaber, G. and Hanson, G. and Heile, F. B. and Jean-Marie, B. and Kadyk, J. A. and Larsen, R. R. and Litke, A. M. and L\"uke, D. and Lulu, B. A. and L\"uth, V. and Lyon, D. and Morehouse, C. C. and Paterson, J. M. and Pierre, F. M. and Pun, T. P. and Rapidis, P. A. and Richter, B. and Sadoulet, B. and Schwitters, R. F. and Tanenbaum, W. and Trilling, G. H. and Vannucci, F. and Whitaker, J. S. and Winkelmann, F. C. and Wiss, J. E.},
+  author = {Perl, M. L. and others},
   journal = {Phys. Rev. Lett.},
   volume = {35},
   issue = {22},
@@ -2037,4 +2016,66 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
       SLACcitation   = "%%CITATION = ARXIV:1509.04113;%%"
+}
+
+
+@article{Homestake,
+  title = {Search for Neutrinos from the Sun},
+  author = {Davis, Raymond and Harmer, Don S. and Hoffman, Kenneth C.},
+  journal = {Phys. Rev. Lett.},
+  volume = {20},
+  issue = {21},
+  pages = {1205--1209},
+  numpages = {0},
+  year = {1968},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.20.1205},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.20.1205}
+}
+
+
+@article{AuroraRecent,
+	abstract = {The Aurora experiment to investigate double beta decay of 116 Cd with the help of 1.162 kg cadmium tungstate crystal scintillators enriched in 116 Cd to 82\% is in progress at the Gran Sasso Underground Laboratory. The half-life of 116 Cd relatively to the two neutrino double beta decay is measured with the highest up-to-date accuracy T 1/2 = (2.62 ± 0.14) × 10 19 yr. The sensitivity of the experiment to the neutrinoless double beta decay of 116 Cd to the ground state of 116 Sn is estimated as T 1/2 ≥ 1.9 × 10 23 yr at 90\% CL, which corresponds to the effective Majorana neutrino mass limit (mv) ≤ (1.2 --- 1.8) eV. New limits are obtained for the double beta decay of 116 Cd to the excited levels of 116 Sn, and for the neutrinoless double beta decay with emission of majorons.},
+	author = {Danevich, F A and others},
+	journal = {Journal of Physics: Conference Series},
+	number = {6},
+	pages = {062009},
+	title = {{Search for double beta decay of 116 Cd with enriched 116 CdWO 4 crystal scintillators (Aurora experiment)}},
+	url = {http://stacks.iop.org/1742-6596/718/i=6/a=062009},
+	volume = {718},
+	year = {2016}
+}
+
+
+@article{Aurora,
+      author         = "Danevich, F. A. and others",
+      title          = "{Search for double beta decay of $^{116}$Cd with enriched
+                        $^{116}$CdWO$_4$ crystal scintillators (Aurora
+                        experiment)}",
+      booktitle      = "{Proceedings, 14th International Conference on Topics in
+                        Astroparticle and Underground Physics (TAUP 2015): Torino,
+                        Italy, September 7-11, 2015}",
+      journal        = "J. Phys. Conf. Ser.",
+      volume         = "718",
+      year           = "2016",
+      number         = "6",
+      pages          = "062009",
+      doi            = "10.1088/1742-6596/718/6/062009",
+      eprint         = "1601.05578",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1601.05578;%%"
+}
+
+
+@article{QuadrupleBetaDecayNEMO,
+      author         = "Arnold, R. and others",
+      title          = "{Search for neutrinoless quadruple-$\beta$ decay of
+                        $^{150}$Nd with the NEMO-3 detector}",
+      year           = "2017",
+      eprint         = "1705.08847",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1705.08847;%%"
 }
