--- a/thesis.tex
+++ b/thesis.tex
@@ -7,17 +7,17 @@
 \usepackage[english]{babel}            % pour transformer chapter -> chapitre\\
 \selectlanguage{english}
 \usepackage[utf8]{inputenc}            % pour mettre les accents
-\usepackage[fontsize=12pt]{scrextend}  % pour changer la taille de la police
+\usepackage[fontsize=11pt]{scrextend}  % pour changer la taille de la police
 
 %\usepackage[inner  = 3.5cm,
 %            outer  = 2.7cm,
 %            top    = 3.5cm,
 %            bottom = 3.5cm]{geometry}  % pour les marges changeantes interieur et extérieur      
             
-            \usepackage[inner  = 3.0cm,
-            outer  = 2.4cm,
-            top    = 3.0cm,
-            bottom = 3.0cm]{geometry}  % pour les marges changeantes interieur et extérieur 
+\usepackage[inner  = 2.5cm,
+            outer  = 2.2cm,
+            top    = 2.5cm,
+            bottom = 2.5cm]{geometry}  % pour les marges changeantes interieur et extérieur 
             
               
 \usepackage{xcolor,lipsum}             % Required for specifying colors by name
@@ -50,7 +50,7 @@
 %\usepackage{lastpage}                 % Used to determine the number of pages in the document (for "Page X of Total")* 
 %\usepackage{bm}
 \usepackage[nottoc, notlof, notlot]{tocbibind}
-\renewcommand{\baselinestretch}{1.15}
+\renewcommand{\baselinestretch}{1.1}
 \renewcommand{\thefootnote}{\alph{footnote}}
 
 \usepackage[noadjust]{cite}
@@ -178,9 +178,9 @@ Search for $2\nu\beta\beta$ and $0\nu\beta\beta$ decays of $^{\text{116}}$Cd int
 
 \appendix
 
-\subfile{Annexe1-SourceFabrication}
+%\subfile{Annexe1-SourceFabrication}
 
-\subfile{Annexe2-LightInjection}
+%\subfile{Annexe2-LightInjection}
 
 
 
