--- a/biblio.bib
+++ b/biblio.bib
@@ -12,7 +12,7 @@
 
 @article{DayaBay,
   title = {New Measurement of Antineutrino Oscillation with the Full Detector Configuration at Daya Bay},
-  author = {An, F. P. and al.},
+  author = {An, F. P. and others},
   collaboration = {Daya Bay Collaboration},
   journal = {Phys. Rev. Lett.},
   volume = {115},
@@ -20,7 +20,6 @@
   pages = {111802},
   numpages = {8},
   year = {2015},
-  month = {Sep},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.115.111802},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.111802}
@@ -65,32 +64,41 @@ url = {http://pdg.lbl.gov}
       SLACcitation   = "%%CITATION = CHPHD,C38,090001;%%"
 }
 
+
 @article{Opera,
-	archiveprefix = {arXiv},
-	author = {Agafonova, N. and others},
-	collaboration = {OPERA},
-	doi = {10.1016/j.physletb.2010.06.022},
-	eprint = {1006.1623},
-	journal = {Phys.Lett.},
-	pages = {138--145},
-	primaryclass = {hep-ex},
-	slaccitation = {\%\%CITATION = ARXIV:1006.1623;\%\%},
-	title = {{Observation of a first $\nu_\tau$ candidate in the OPERA experiment in the CNGS beam}},
-	volume = {B691},
-	year = {2010}
+      author         = "Agafonova, N. and others",
+      title          = "{Observation of a first $\nu_\tau$ candidate in the OPERA
+                        experiment in the CNGS beam}",
+      collaboration  = "OPERA",
+      journal        = "Phys. Lett.",
+      volume         = "B691",
+      year           = "2010",
+      pages          = "138-145",
+      doi            = "10.1016/j.physletb.2010.06.022",
+      eprint         = "1006.1623",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1006.1623;%%"
 }
 
 
 @article{OperaTau,
-	archiveprefix = {arXiv},
-	author = {Agafonova, N. and others},
-	collaboration = {OPERA},
-	eprint = {1308.2553},
-	primaryclass = {hep-ex},
-	slaccitation = {\%\%CITATION = ARXIV:1308.2553;\%\%},
-	title = {{New results on $\nu_\mu \to \nu_\tau$ appearance with the OPERA experiment in the CNGS beam}},
-	year = {2013}
+      author         = "Agafonova, N. and others",
+      title          = "{New results on $\nu_\mu \to \nu_\tau$ appearance with
+                        the OPERA experiment in the CNGS beam}",
+      collaboration  = "OPERA",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2013",
+      pages          = "036",
+      doi            = "10.1007/JHEP11(2013)036, 10.1007/JHEP04(2014)014",
+      note           = "[Erratum: JHEP04,014(2014)]",
+      eprint         = "1308.2553",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1308.2553;%%"
 }
+
 
 @article{T2Knim,
 	archiveprefix = {arXiv},
@@ -108,26 +116,41 @@ url = {http://pdg.lbl.gov}
 }
 
 @article{T2KNue2nd,
-	archiveprefix = {arXiv},
-	author = {Abe, K. and others},
-	collaboration = {T2K},
-	eprint = {1304.0841},
-	primaryclass = {hep-ex},
-	slaccitation = {\%\%CITATION = ARXIV:1304.0841;\%\%},
-	title = {{Evidence of Electron Neutrino Appearance in a Muon Neutrino Beam}},
-	year = {2013}
+      author         = "Abe, K. and others",
+      title          = "{Evidence of Electron Neutrino Appearance in a Muon
+                        Neutrino Beam}",
+      collaboration  = "T2K",
+      journal        = "Phys. Rev.",
+      volume         = "D88",
+      year           = "2013",
+      number         = "3",
+      pages          = "032002",
+      doi            = "10.1103/PhysRevD.88.032002",
+      eprint         = "1304.0841",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1304.0841;%%"
 }
 
+
+
 @article{T2Knumu2nd,
-	archiveprefix = {arXiv},
-	author = {Abe, K. and others},
-	collaboration = {T2K},
-	eprint = {1308.0465},
-	primaryclass = {hep-ex},
-	slaccitation = {\%\%CITATION = ARXIV:1308.0465;\%\%},
-	title = {{Measurement of Neutrino Oscillation Parameters from Muon Neutrino Disappearance with an Off-axis Beam}},
-	year = {2013}
+      author         = "Abe, K. and others",
+      title          = "{Measurement of Neutrino Oscillation Parameters from Muon
+                        Neutrino Disappearance with an Off-axis Beam}",
+      collaboration  = "T2K",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "111",
+      year           = "2013",
+      number         = "21",
+      pages          = "211803",
+      doi            = "10.1103/PhysRevLett.111.211803",
+      eprint         = "1308.0465",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1308.0465;%%"
 }
+
 
 @article{JUNO,
       author         = "An, Fengpeng and others",
@@ -145,7 +168,7 @@ url = {http://pdg.lbl.gov}
       SLACcitation   = "%%CITATION = ARXIV:1507.05613;%%"
 }
 
-@article{DUNE,
+@misc{DUNE,
       author         = "Acciarri, R. and others",
       title          = "{Long-Baseline Neutrino Facility (LBNF) and Deep
                         Underground Neutrino Experiment (DUNE)}",
@@ -157,6 +180,8 @@ url = {http://pdg.lbl.gov}
       reportNumber   = "FERMILAB-DESIGN-2016-01",
       SLACcitation   = "%%CITATION = ARXIV:1601.05471;%%"
 }
+
+
 
 @inproceedings{HK,
       author         = "Abe, K. and others",
@@ -199,14 +224,13 @@ url = {http://pdg.lbl.gov}
 
 @article{PSI,
   title = {Upper limit of the muon-neutrino mass and charged-pion mass from momentum analysis of a surface muon beam},
-  author = {Assamagan, K. and Br\"onnimann, Ch. and Daum, M. and Forrer, H. and Frosch, R. and Gheno, P. and Horisberger, R. and Janousch, M. and Kettle, P. -R. and Spirig, Th. and Wigger, C.},
+  author = {Assamagan, K. and others},
   journal = {Phys. Rev. D},
   volume = {53},
   issue = {11},
   pages = {6065--6077},
   numpages = {0},
   year = {1996},
-  month = {Jun},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.53.6065},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.53.6065}
@@ -214,18 +238,17 @@ url = {http://pdg.lbl.gov}
 
 
 @article{ALEPHneutrinoTau,
-title = "An upper limit on the tau-neutrino mass from three-prong and five-prong tau decays",
-author = "{ALEPH Collaboration}, The and R. Barate and Andrew Betteridge and Christopher Bowdery and Paul Colrain and Alexander Finch and Frank Foster and Gareth Hughes and Roger Jones and Terence Sloan and Mark Williams",
-year = "1998",
-month = "4",
-doi = "10.1007/s100520050149",
-volume = "2",
-pages = "395--406",
-journal = "European Physical Journal C: Particles and Fields",
-issn = "1434-6044",
-publisher = "SPRINGER",
-number = "3",
-
+ title = "An upper limit on the tau-neutrino mass from three-prong and five-prong tau decays",
+ author = "{ALEPH Collaboration}",
+ year = "1998",
+ month = "4",
+ doi = "10.1007/s100520050149",
+ volume = "2",
+ pages = "395--406",
+ journal = "European Physical Journal C: Particles and Fields",
+ issn = "1434-6044",
+ publisher = "SPRINGER",
+ number = "3"
 }
 
 
@@ -272,7 +295,6 @@ number = "3",
   pages = {035501},
   numpages = {12},
   year = {2003},
-  month = {Sep},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.68.035501},
   url = {http://link.aps.org/doi/10.1103/PhysRevC.68.035501}
@@ -412,7 +434,6 @@ author = "N. Kudomi and others",
   pages = {182302},
   numpages = {4},
   year = {2005},
-  month = {Oct},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.95.182302},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.95.182302}
@@ -544,7 +565,6 @@ author = "N. Kudomi and others",
   pages = {2163--2171},
   numpages = {0},
   year = {1989},
-  month = {Oct},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.40.2163},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.40.2163}
@@ -583,7 +603,7 @@ author = "N. Kudomi and others",
 
 
 @article{NEMO2,
-      author         = "R. Arnold et al.",
+      author         = "Arnold, R. and others",
       title          = "{Performances of NEMO-2, a Prototype Tracking Detector for Double Beta Decay Measurements}",
       journal        = "Nucl. Instrum. Meth.",
       volume         = "A354",
@@ -634,7 +654,7 @@ author = "N. Kudomi and others",
 
 @article{ProbingNewPhysicsSN,
 	risfield_0_da = {2010//},
-	author = {{Arnold R.} and al},
+	author = {{R. Arnold} and al},
 	doi = {http://dx.doi.org/10.1140/epjc/s10052-010-1481-5 10.1140/epjc/s10052-010-1481-5},
 	issn = {1434-6052},
 	journal = {The European Physical Journal C},
@@ -685,7 +705,6 @@ author = "N. Kudomi and others",
   pages = {512--516},
   numpages = {0},
   year = {1935},
-  month = {Sep},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.48.512},
   url = {https://link.aps.org/doi/10.1103/PhysRev.48.512}
@@ -743,7 +762,6 @@ author = "N. Kudomi and others",
   pages = {2227--2235},
   numpages = {0},
   year = {1980},
-  month = {Nov},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.22.2227},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.22.2227}
@@ -785,7 +803,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {1926--1929},
   numpages = {0},
   year = {1980},
-  month = {Dec},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.45.1926},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.45.1926}
@@ -794,7 +811,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{MajoronEmission2,
 	risfield_0_da = {1982/12/16},
-	author = {{Aulakh C.S.} and {Mohapatra R.N.}},
+	author = {{C.S. Aulakh} and {R.N. Mohapatra}},
 	doi = {http://dx.doi.org/10.1016/0370-2693(82)90262-3},
 	issn = {0370-2693},
 	journal = {Physics Letters B},
@@ -809,7 +826,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{MajoronEmission3,
 	risfield_0_da = {1981/03/05},
-	author = {{Gelmini G.B.} and {Roncadelli M.}},
+	author = {{G.B. Gelmini} and {M. Roncadelli}},
 	doi = {http://dx.doi.org/10.1016/0370-2693(81)90559-1},
 	issn = {0370-2693},
 	journal = {Physics Letters B},
@@ -823,7 +840,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{MajoronDecayMode,
 	risfield_0_da = {1995/08/28},
-	author = {{Bamert P.} and {Burgess C.P.} and {Mohapatra R.N.}},
+	author = {{P. Bamert} and {C.P. Burgess} and {R.N. Mohapatra}},
 	doi = {http://dx.doi.org/10.1016/0550-3213(95)00273-U},
 	issn = {0550-3213},
 	journal = {Nuclear Physics B},
@@ -854,11 +871,10 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 }
 
 @article{HeidelbergMoscow2,
-	author = {{Klapdor-Kleingrothaus H.V} and {Krivosheina I.V} and {Dietz A} and {Chkvorets O}},
+	author = {{H.V Klapdor-Kleingrothaus} and {I.V Krivosheina} and {A. Dietz} and {O. Chkvorets}},
 	doi = {https://doi.org/10.1016/j.physletb.2004.02.025},
 	issn = {0370-2693},
 	journal = {Physics Letters B},
-	month = apr,
 	number = {3--4},
 	pages = {198--212},
 	title = {{Search for neutrinoless double beta decay with enriched 76Ge in Gran Sasso 1990--2003}},
@@ -883,7 +899,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 
 @article{IGEX,
-	author = "Aalseth C. E. and others",
+	author = "Aalseth, C. E. and others",
 	doi = {http://dx.doi.org/10.1134/1.855774 10.1134/1.855774},
 	issn = {1562-692X},
 	journal = {Physics of Atomic Nuclei},
@@ -913,13 +929,13 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{Gerda2nubb,
 	risfield_0_da = {2015//},
-	author = {{Agostini M.} and others},
+	author = {{M. Agostini} and others},
 	doi = {http://dx.doi.org/10.1140/epjc/s10052-015-3627-y 10.1140/epjc/s10052-015-3627-y},
 	issn = {1434-6052},
 	journal = {The European Physical Journal C},
 	number = {9},
 	pages = {416},
-	title = {{Results on $\beta\beta$  decay with emission of two neutrinos or Majorons in $^{76}$ 76 Ge from GERDA PhaseI}},
+	title = {{Results on $\beta\beta$  decay with emission of two neutrinos or Majorons in $^{76}$Ge from GERDA PhaseI}},
 	volume = {75},
 	year = {2015}
 }
@@ -980,7 +996,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 @article{COBRA,
 	risfield_0_da = {2011/12/01},
 	risfield_1_t2 = {The Proceedings of the 22nd International Conference on Neutrino Physics and Astrophysics},
-	author = {{Wilson Jeanne R.}},
+	author = {{J. R. Wilson}},
 	doi = {http://dx.doi.org/10.1016/j.nuclphysbps.2011.09.022},
 	issn = {0920-5632},
 	journal = {Nuclear Physics B - Proceedings Supplements},
@@ -1001,7 +1017,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {058501},
   numpages = {4},
   year = {2008},
-  month = {Nov},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.78.058501},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.78.058501}
@@ -1057,7 +1072,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 @article{KamLAND-Zen3,
 	risfield_0_da = {2013/04/01},
 	risfield_1_t2 = {Proceedings of the Neutrino Oscillation Workshop},
-	author = {{Shirai Junpei}},
+	author = {{S. Junpei}},
 	doi = {http://dx.doi.org/10.1016/j.nuclphysbps.2013.04.049},
 	issn = {0920-5632},
 	journal = {Nuclear Physics B - Proceedings Supplements},
@@ -1103,7 +1118,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 }
 
 @article{CUORE,
-	author = {collaboration, {Luca Pattavina and the Cuore}},
+	author = "{{Cuore Collaboration}}",
 	issn = {1742-6596},
 	journal = {Journal of Physics: Conference Series},
 	number = {1},
@@ -1124,7 +1139,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {102502},
   numpages = {7},
   year = {2015},
-  month = {Sep},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.115.102502},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.102502}
@@ -1132,7 +1146,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 
 @article{LUCIFER,
-	author = {collaboration, {Luca Pattavina and the Lucifer}},
+	author = "{Cuore Collaboration}",
 	issn = {1742-6596},
 	journal = {Journal of Physics: Conference Series},
 	number = {1},
@@ -1144,7 +1158,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 }
 
 @article{EXO-200,
-  title = {Search for Neutrinoless Double-Beta Decay in $^{136}\mathrm{Xe}$ with EXO-200},
+  title = {Search for Neutrinoless Double-Beta Decay in $^{136}\mathrm{Xe}$ with $\mathrm{EXO}$-200},
   collaboration = {EXO Collaboration},
   journal = {Phys. Rev. Lett.},
   volume = {109},
@@ -1152,7 +1166,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {032505},
   numpages = {6},
   year = {2012},
-  month = {Jul},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.109.032505},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.109.032505}
@@ -1233,7 +1246,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{GlobalFitNeutrinoParameter,
 	risfield_0_da = {2014//},
-	author = {{Gonzalez-Garcia M. C.} and {Maltoni Michele} and {Schwetz Thomas}},
+	author = {{M. C. Gonzalez-Garcia} and {M. Maltoni} and {T. Schwetz}},
 	doi = {http://dx.doi.org/10.1007/JHEP11(2014)052 10.1007/JHEP11(2014)052},
 	issn = {1029-8479},
 	journal = {Journal of High Energy Physics},
@@ -1253,7 +1266,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {012002},
   numpages = {8},
   year = {2015},
-  month = {Jul},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.92.012002},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.92.012002}
@@ -1268,7 +1280,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {1413--1415},
   numpages = {0},
   year = {1957},
-  month = {Feb},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.105.1413},
   url = {https://link.aps.org/doi/10.1103/PhysRev.105.1413}
@@ -1283,7 +1294,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {1015--1017},
   numpages = {0},
   year = {1958},
-  month = {Feb},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.109.1015},
   url = {https://link.aps.org/doi/10.1103/PhysRev.109.1015}
@@ -1347,7 +1357,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{ISM_1,
 	risfield_0_da = {2009/03/01},
-	author = {{Men\'{e}ndez J.} and {Poves A.} and {Caurier E.} and {Nowacki F.}},
+	author = {{J. Men\'{e}ndez} and {A. Poves} and {E. Caurier} and {F. Nowacki}},
 	doi = {http://dx.doi.org/10.1016/j.nuclphysa.2008.12.005},
 	issn = {0375-9474},
 	journal = {Nuclear Physics A},
@@ -1362,7 +1372,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{ISM_2,
 	risfield_0_da = {2008//},
-	author = {{Caurier E.} and {Nowacki F.} and {Poves A.}},
+	author = {{E. Caurier} and {F. Nowacki} and {A. Poves}},
 	doi = {http://dx.doi.org/10.1140/epja/i2007-10527-x 10.1140/epja/i2007-10527-x},
 	issn = {1434-601X},
 	journal = {The European Physical Journal A},
@@ -1382,7 +1392,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {052503},
   numpages = {4},
   year = {2008},
-  month = {Feb},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.100.052503},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.100.052503}
@@ -1398,7 +1407,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {051301},
   numpages = {5},
   year = {2014},
-  month = {Nov},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.90.051301},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.90.051301}
@@ -1465,7 +1473,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {014315},
   numpages = {20},
   year = {2013},
-  month = {Jan},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.87.014315},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.87.014315}
@@ -1494,7 +1501,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {064322},
   numpages = {13},
   year = {2013},
-  month = {Dec},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.88.064322},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.88.064322}
@@ -1502,7 +1508,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @article{EDF_1,
 	risfield_0_da = {1984/10/22},
-	author = {{Berger J.F.} and {Girod M.} and {Gogny D.}},
+	author = {{J.F. Berger} and {M. Girod} and {D. Gogny}},
 	doi = {http://dx.doi.org/10.1016/0375-9474(84)90240-9},
 	issn = {0375-9474},
 	journal = {Nuclear Physics A},
@@ -1537,7 +1543,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {054309},
   numpages = {16},
   year = {2014},
-  month = {Nov},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.90.054309},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.90.054309}
@@ -1552,7 +1557,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {028502},
   numpages = {4},
   year = {2010},
-  month = {Feb},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.81.028502},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.81.028502}
@@ -1567,7 +1571,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {011302},
   numpages = {6},
   year = {2013},
-  month = {Jan},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevC.87.011302},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.87.011302}
@@ -1583,7 +1586,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {481--516},
   numpages = {0},
   year = {2008},
-  month = {Apr},
   publisher = {American Physical Society},
   doi = {10.1103/RevModPhys.80.481},
   url = {https://link.aps.org/doi/10.1103/RevModPhys.80.481}
@@ -1612,7 +1614,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
       author         = "Garfagnini, Alberto",
       title          = "{Neutrinoless Double Beta Decay Experiments}",
       booktitle      = "{12th Conference on Flavor Physics and CP Violation (FPCP
-                        2014) Marseille, France, May 26-30, 2014}",
+                        2014) Marseille, France, May 26-30}",
       url            = "https://inspirehep.net/record/1310387/files/arXiv:1408.2455.pdf",
       year           = "2014",
       eprint         = "1408.2455",
@@ -1654,9 +1656,8 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 
 @online{GEANT4,
-  author = {Cern GEANT4},
-  title = {GEANT 4},
-  url = {http://geant4.cern.ch/}
+  author = "{Cern GEANT4}",
+  title = {GEANT 4, http://geant4.cern.ch },
 }
 
 
@@ -1685,10 +1686,12 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 }
 
 @misc{GammaReconstructionHereward,
-	author = "Summer Blot et al.",
+	author = "Blot, S. and others",
 	title  = "Gamma Identification and Reconstruction in Hereward, Internal note : DocDB3151",
 	year   = "2014"
 }
+
+
 
 
 @article{TMVA,
@@ -1705,7 +1708,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 @misc{PositionPaperSummer,
 	author = "Summer Blot",
-	title  = "Position paper for 150 Nd $\rightarrow$ 150 Sm ground state analysis : DocDB3716",
+	title  = "Position paper for $^{150}\mathrm{Nd}$ $\rightarrow$ $^{150}\mathrm{Sm}$ ground state analysis : DocDB3716",
 	year   = "2014"
 }
 
@@ -1767,7 +1770,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 
 
 @misc{DriftTimeModel,
-	author = "Nasteva I and al.",
+	author = "{I. Nasteva et al.}",
 	title  = "90-cell prototype performance : DocDB 803",
 	month  = "June.",
 	year   = "2009"
@@ -1800,11 +1803,11 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 }
 
 @misc{PhysicsCaseSuperNEMO,
-	author = "J.J. Gomez-Cadenas et al.",
-	title  = "Physics case of supernemo with 82se source.: DocDB 358-v2",
-	month  = "March.",
+	author = "{J.J. Gomez-Cadenas et al.}",
+	title  = "Physics case of supernemo with 82se source : DocDB 358-v2",
 	year   = "2008"
 }
+
 
 @article{ChadwickBetaSpectrum,
       author         = "J. Chadwick.",
@@ -1812,8 +1815,7 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
       journal        = "Phys. Ges.",
       volume         = "16",
       year           = "1914",
-      pages          = ":383",
- 
+      pages          = "383",
 }
 
 
@@ -1848,7 +1850,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
 	doi = {10.1007/BF01351864},
 	issn = {0044-3328},
 	journal = {Zeitschrift f\"{u}r Physik},
-	month = {Mar},
 	number = {3},
 	pages = {161--177},
 	title = {{Versuch einer Theorie der $\beta$-Strahlen. I}},
@@ -1867,7 +1868,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {331--334},
   numpages = {0},
   year = {1962},
-  month = {Jul},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.127.331},
   url = {https://link.aps.org/doi/10.1103/PhysRev.127.331}
@@ -1894,7 +1894,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {1264--1266},
   numpages = {0},
   year = {1967},
-  month = {Nov},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.19.1264},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.19.1264}
@@ -1909,7 +1908,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {263--271},
   numpages = {0},
   year = {1936},
-  month = {Aug},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.50.263},
   url = {https://link.aps.org/doi/10.1103/PhysRev.50.263}
@@ -1924,7 +1922,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {36--44},
   numpages = {0},
   year = {1962},
-  month = {Jul},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.9.36},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.9.36}
@@ -1940,7 +1937,6 @@ eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-
   pages = {1489--1492},
   numpages = {0},
   year = {1975},
-  month = {Dec},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.35.1489},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.35.1489}
