--- a/Summary.tex
+++ b/Summary.tex
@@ -6,9 +6,9 @@
 
 \begin{document}
 
-\begin{changemargin}{-2cm}{-1cm}
+%\begin{changemargin}{-2cm}{-1cm}
 
-\begin{multicols}{2}\\
+%\begin{multicols}{2}
 
 
 \NI \textbf{R\'esum\'e}
@@ -23,11 +23,12 @@
 
 \NI \textbf{Mots clés}
 
-\bigskip
+\smallskip
 
 \NI \small{Neutrino, Double bêta, SuperNEMO, Feuille source, Radon, État excité, Cadmium-116}
 
 
+\vspace{3cm}
 
 
 \NI \textbf{Abstract}
@@ -37,17 +38,15 @@
 \noindent The NEMO-3 and SuperNEMO detectors have been designed to search for neutrinoless double beta decays. These detectors provide a unique approach combining a calorimetric and a tracking measurement of double beta events emitted by a separated isotopic source. This approach allows to search for neutrinoless double beta decays among several isotopes with good background rejection. \\
 \noindent This thesis presents many studies performed for the optimisation and the preparation of the SuperNEMO detector, successor of NEMO-3. The first study concerns the optimisation of the detector performances with respect to the design of the source foil. The conclusion of this study is that the two configurations considered are equivalent. The second study focuses on the radon which constitutes one of the main background to the search for double beta decays. In this study an algorithm has been developed and implemented to search for the alpha particle allowing the identification and the measurement of the radon events. The thesis is completed by an analysis of the NEMO-3 data to search for the double beta decay of $^{\text{116}}$Cd via the excited state of $^{\text{116}}$Sn. These decays have never been observed up to date and the limits set on the excited states (2$^+$) and (0$^+$) are the first using the NEMO-3 detector.
 
-\vspace{3.85cm}
-
 \NI \textbf{Key Words}
 
-\bigskip
+\smallskip
 
 \NI \small{Neutrino, Double beta decay, SuperNEMO, Source Foil, Radon, Excited State, Cadmium-116}
 
 
-\end{multicols}
+%\end{multicols}
 
-\end{changemargin}
+%\end{changemargin}
 
 \end{document}
